fixed bug - section-4 was left aligned
set display to flex to justify the content to center.

--- a/style.css
+++ b/style.css
@@ -179,6 +179,9 @@ ul {
 
 .section-4 {
 height: 200px;
+display:flex;
+align-items:center;
+justify-content: center;
 }
 
 .section-4 .container {
